# the-docs-demo

./: 404.html  README.md  create-page.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
community/: index.html
community/placeholder/: index.html
docs/getting-started/quickstart/: placeholder.md
getting-started/: index.html
getting-started/placeholder/: index.html
getting-started/quickstart/: index.html
getting-started/quickstart/placeholder/: index.html
getting-started/tutorials/from-scratch/: index.html
getting-started/tutorials/with-docker/: index.html
getting-started/tutorials/with-k8s/: index.html
guides/: index.html
guides/how-placeholder/: index.html
reference/: index.html
reference/placeholder/: index.html
search/: search_index.json
tags/: index.html
